<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ROM control</string>
    <string name="rom_control">ROM control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_show_drawer_icon">Show in app drawer</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="center">Centered</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="choose_app">Choose application</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="category_general">General</string>
    <string name="category_lockscreen">Lockscreen</string>
    <string name="category_statusbar">Statusbar</string>
    <string name="category_notifications_drawer">Notifications Drawer</string>
    <string name="category_hardware_keys">Hardware keys</string>
    <string name="category_power_menu">Power menu </string>
    <string name="category_sound">Sound</string>
    <string name="category_ui">User Interface</string>
    <string name="category_app_launcher">App launcher</string>
    <string name="category_display_launcher">Display</string>
    <string name="general_settings">General settings</string>
    <string name="recents_settings">Recents settings</string>
    <string name="lock_clock_title">cLock settings</string>
    <string name="lock_clock_summary">View or change how the \'cLock\' widget will be displayed.</string>
    <string name="recents_show_searchbar">Recents Search-bar</string>
    <string name="recents_show_searchbar_summary">Shows Search-bar in the recent apps window</string>
    <string name="recents_panel_title">Recents panel</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
    <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
    <string name="recents_show_fullscreen">Recents in fullscreen</string>
    <string name="recents_fullscreen_summary_enabled">Recents in fullscreen is enabled</string>
    <string name="recents_fullscreen_summary_disabled">Recents in fullscreen is disabled</string>
    <string name="sound_title">Sound</string>
    <string name="safe_headset_volume_title">Safe headset volume</string>
    <string name="safe_headset_volume_summary">Whether safe headset volume warning is shown</string>
    <string name="safe_headset_volume_warning_dialog_text">Listening at high volume for long periods may damage your hearing. Disable it with caution.</string>
    <string name="notifications_category_title">Notifications</string>
    <string name="less_notification_sounds_title">Less frequent notification sounds</string>
    <string name="less_notification_sounds_summary">Limit the notification sounds of each app to only play once per set time period</string>
    <string name="less_notification_sounds_default">Default Behaviour</string>
    <string name="less_notification_sounds_3s">3 seconds</string>
    <string name="less_notification_sounds_5s">5 seconds</string>
    <string name="less_notification_sounds_10s">10 seconds</string>
    <string name="less_notification_sounds_15s">15 seconds</string>
    <string name="less_notification_sounds_30s">30 seconds</string>
    <string name="less_notification_sounds_45s">45 seconds</string>
    <string name="less_notification_sounds_1m">1 minute</string>
    <string name="less_notification_sounds_2m">2 minutes</string>
    <string name="less_notification_sounds_5m">5 minutes</string>
    <string name="camera_sounds_title">Camera shutter sound</string>
    <string name="camera_sounds_summary">Enable system camera shutter sound</string>
    <string name="camera_sound_warning_dialog_text">Disabling the camera shutter sound is illegal in some areas! Please check the applicable law in your country</string>
    <string name="screenshot_sound_title">Screenshot sound</string>
    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="volume_steps_alarm_title">Volume steps: Alarm</string>
    <string name="volume_steps_dtmf_title">Volume steps: DTMF</string>
    <string name="volume_steps_music_title">Volume steps: Music</string>
    <string name="volume_steps_notification_title">Volume steps: Notification</string>
    <string name="volume_steps_ring_title">Volume steps: Ringer</string>
    <string name="volume_steps_system_title">Volume steps: System</string>
    <string name="volume_steps_voice_call_title">Volume steps: Voice Call</string>
    <string name="volume_steps_60">60</string>
    <string name="volume_steps_45">45</string>
    <string name="volume_steps_30">30</string>
    <string name="volume_steps_15">15</string>
    <string name="volume_steps_7">7</string>
    <string name="volume_steps_5">5</string>
    <string name="mgerrit_changelog_title">mGerrit: Dynamic ChangeLog</string>
    <string name="mgerrit_changelog_summary">Interactive changelog pulled live from our Gerrit instance</string>
    <plurals name="multichoice_at_least">
        <item quantity="one">Please select at least <xliff:g id="number">%d</xliff:g> item.</item>
        <item quantity="other">Please select at least <xliff:g id="number">%d</xliff:g> items.</item>
    </plurals>
    <plurals name="multichoice_at_most">
        <item quantity="one">Please select at most <xliff:g id="number">%d</xliff:g> item.</item>
        <item quantity="other">Please select at most <xliff:g id="number">%d</xliff:g> items.</item>
    </plurals>
    <string name="dialog_color_picker">Color picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FF000000</string>
    <string name="set">Set</string>
    <string name="default_color">Default</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="group_applications">Applications</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_appgroups_title">App groups</string>
    <string name="profile_applist_title">Applications</string>
    <string name="profile_new_appgroup">New app group</string>
    <string name="profile_delete_appgroup">Delete this app group?</string>
    <string name="profile_appgroup_name_prompt">Enter a name for the new app group</string>
    <string name="profile_appgroup_name_title">Name</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_temperature_title">Temperature</string>
    <string name="status_bar_temperature_hidden">Hidden</string>
    <string name="status_bar_temperature_show_scale">Shown with scale</string>
    <string name="status_bar_temperature_hide_scale">Shown without scale</string>
    <string name="status_bar_temperature_location_title">Placement</string>
    <string name="status_bar_temperature_location_summary">Select where the weather temperature is shown on the statusbar</string>
    <string name="status_bar_temperature_location_right">Show on right</string>
    <string name="status_bar_temperature_location_left">Show on left</string>
    <string name="status_bar_weather_color_title">Temperature color</string>
    <string name="status_bar_weather_size_title">Font size</string>
    <string name="status_bar_weather_font_style_title">Font</string>
    <string name="status_bar_weather_font_normal">Normal</string>
    <string name="status_bar_weather_font_italic">Italic</string>
    <string name="status_bar_weather_font_bold">Bold</string>
    <string name="status_bar_weather_font_bold_italic">Bold Italic</string>
    <string name="status_bar_weather_font_light">Light</string>
    <string name="status_bar_weather_font_light_italic">Light Italic</string>
    <string name="status_bar_weather_font_thin">Thin</string>
    <string name="status_bar_weather_font_thin_italic">Thin Italic</string>
    <string name="status_bar_weather_font_condensed">Condensed</string>
    <string name="status_bar_weather_font_condensed_italic">Condensed Italic</string>
    <string name="status_bar_weather_font_condensed_bold">Condensed Bold</string>
    <string name="status_bar_weather_font_condensed_bold_italic">Condensed Bold Italic</string>
    <string name="status_bar_weather_font_medium">Medium</string>
    <string name="status_bar_weather_font_medium_italic">Medium Italic</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="recents_show_membar_title">Memory bar</string>
    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
	<string name="hbmon">HBM on</string>
	<string name="hbmoff">HBM off</string>
	<string name="dinamic_mode">Dynamic Mode (AMOLED cinema)</string>
	<string name="standard_mode">Standard Mode (AMOLED photo)</string>
	<string name="natural_mode">Natural Mode (basic)</string>
	<string name="movie_mode">Movie Mode</string>
	<string name="auto_mode">Auto Mode (adaptive Display)</string>
	<string name="set_at_boot">Set at boot</string>
    <string name="hide_apps_from_recents_title">Hidden Apps</string>
    <string name="hide_apps_from_recents_summary">Pick which apps to exclude from the recents panel.</string>
    <string name="emotion_recent_slim_category">Slim Recents</string>
    <string name="use_slim_recents_title">Slim recents</string>
    <string name="omniswitch_category_title">OmniSwitch</string>
    <string name="recents_use_omniswitch_title">Use OmniSwitch for recents</string>
    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of default recents view</string>
    <string name="omniswitch_start_settings_title">Settings</string>
    <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
</resources>