<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2015, The Android Open Kang Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/recents_settings">

    <PreferenceCategory
        android:key="recents_panel"
        android:title="@string/recents_panel_title" >

        <com.aokp.romcontrol.settings.CMSystemSettingSwitchPreference
            android:key="recents_show_search_bar"
            android:title="@string/recents_show_searchbar"
            android:summary="@string/recents_show_searchbar_summary"
            android:defaultValue="true" />

        <com.aokp.romcontrol.settings.SystemSettingSwitchPreference
            android:key="systemui_recents_mem_display"
            android:title="@string/recents_show_membar_title"
            android:summary="@string/recents_show_membar_summary"
            android:defaultValue="false" />

        <com.aokp.romcontrol.settings.SystemSettingSwitchPreference
            android:key="recents_full_screen"
            android:title="@string/recents_show_fullscreen"
            android:summaryOn="@string/recents_fullscreen_summary_enabled"
            android:summaryOff="@string/recents_fullscreen_summary_disabled"
            android:defaultValue="false" />

        <Preference
            android:key="hide_app_from_recents"
            android:title="@string/hide_apps_from_recents_title"
            android:summary="@string/hide_apps_from_recents_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="recents_clear_all_recents_button"
        android:title="@string/show_clear_all_recents_button_title" >

        <com.aokp.romcontrol.settings.SystemSettingSwitchPreference
            android:key="show_clear_all_recents"
            android:title="@string/show_clear_all_recents_button_title"
            android:summary="@string/show_clear_all_recents_button_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="recents_clear_all_location"
            android:title="@string/recents_clear_all_location_title"
            android:entries="@array/recents_clear_all_location_entries"
            android:entryValues="@array/recents_clear_all_location_values"
            android:defaultValue="3"
            android:dependency="show_clear_all_recents" />

        <com.aokp.romcontrol.settings.SystemSettingSwitchPreference
            android:key="recents_clear_all_dismiss_all"
            android:title="@string/recents_clear_all_dismiss_all_title"
            android:summary="@string/recents_clear_all_dismiss_all_summary"
            android:defaultValue="true"
            android:dependency="show_clear_all_recents" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="emotion_slim_recents_panel"
        android:title="@string/emotion_recent_slim_category" >

        <!-- Slim Recents -->
        <Preference
            android:key="slim_recents_panel"
            android:title="@string/use_slim_recents_title" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="omniswitch_category"
            android:title="@string/omniswitch_category_title" >

        <SwitchPreference
                android:key="recents_use_omniswitch"
                android:title="@string/recents_use_omniswitch_title"
                android:summary="@string/recents_use_omniswitch_summary"
                android:persistent="false" />

        <Preference
                android:key="omniswitch_start_settings"
                android:title="@string/omniswitch_start_settings_title"
                android:summary="@string/omniswitch_start_settings_summary"
                android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
