<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2016 Emotroid-Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<RelativeLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView 
        android:id="@id/imageView1" 
        android:layout_width="fill_parent"
        android:layout_height="350dp" 
        android:src="@drawable/formissy" 
        android:layout_alignParentLeft="true" 
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75.0dip"
        android:scaleType="fitCenter" />
    <Button 
        android:id="@id/button2" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/hbmoff" 
        android:layout_above="@id/imageView1" 
        android:onClick="FlipHBMoff" />
    
    <Button 
        android:id="@id/button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/hbmon" 
        android:layout_toRightOf="@id/button2" 
        android:layout_above="@id/imageView1" 
        android:onClick="FlipHBMon" />
    
    <RadioGroup 
        android:id="@id/radioGroup" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:layout_alignParentLeft="true" 
        android:layout_alignParentTop="true" 
        android:layout_alignParentBottom="true">
            <RadioButton 
                android:id="@id/radioButton" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/dinamic_mode" 
                android:onClick="DynamicMode" />
            <RadioButton 
                android:id="@id/radioButton2" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/standard_mode"
                android:onClick="StandardMode" />
            <RadioButton 
                android:id="@id/radioButton3" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/natural_mode"
                android:onClick="NaturalMode" />        
            <RadioButton 
                android:id="@id/radioButton4" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/movie_mode"
                android:onClick="MovieMode" />
            <RadioButton 
                android:id="@id/radioButton5" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/auto_mode"
                android:onClick="AutoMode" />
            <CheckBox 
                android:id="@id/checkBox" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/set_at_boot"
                android:layout_below="@id/radioGroup" 
                android:layout_alignParentLeft="true" 
                android:onClick="SetAtBootClick" />
    </RadioGroup>
</RelativeLayout>